# fastscapelib

./: .appveyor.yml  .dir-locals.el  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CMakeLists.txt  HOW_TO_RELEASE.md  README.rst  azure-pipelines.yml  build_test_install.sh  constants.hpp  depressions.hpp  downloadXTensor.cmake.in  environment-dev.yml  environment-python-dev.yml  fastscape.pc.in  fastscapeConfig.cmake.in  fastscapelib.pc.in  fastscapelibConfig.cmake.in  pixi.toml  pyfastscape.cpp  pyproject.toml  sinks.hpp  tbump.toml  test.cpp
.azure-pipelines/: azure-pipelines-linux-gcc.yml  azure-pipelines-linux-python.yml  azure-pipelines-macos-python.yml  azure-pipelines-macos.yml  azure-pipelines-win-python.yml  azure-pipelines-win.yml  unix-build-python.yml  unix-build.yml  unix-python-build.yml
.github/: codecov.yml  dependabot.yml
.github/workflows/: ci-additional.yml  pre-commit.yml  python-wheels.yml  test_cpp.yml  tests.yml  tests_xtensor_master.yml
benchmark/: CMakeLists.txt  benchmark_basin_graph.cpp  benchmark_bedrock_channel.cpp  benchmark_diffusion_adi.cpp  benchmark_flow_routing.cpp  benchmark_grid.cpp  benchmark_hillslope.cpp  benchmark_multi_flow_router.cpp  benchmark_pflood.cpp  benchmark_profile_grid.cpp  benchmark_raster_grid.cpp  benchmark_resolve_sinks.cpp  benchmark_setup.hpp  benchmark_single_flow_router.cpp  benchmark_sink_resolver.cpp  benchmark_sinks.cpp  benchmark_spl.cpp  copyGBenchmark.cmake.in  downloadGBenchmark.cmake.in  fixtures.hpp  main.cpp
benchmarks/: CMakeLists.txt  benchmark.cpp  benchmark.hpp  benchmark_basin_graph.cpp  benchmark_basin_graph.hpp  benchmark_sinks.cpp  benchmark_sinks.hpp  benchmark_v2.cpp  dbg_output.hpp  examples.hpp  fastscape_benchmark.cpp  fastscape_benchmark.hpp  jail.cpp  main.cpp  mountain.cpp  random_benchmark.cpp  random_benchmark.hpp  voronoi.cpp
ci/: environment-dev-no-xtensor.yml  environment-dev-xtensor-master.yml  environment-dev.yml  environment-python-dev.yml
cmake/: FindNumPy.cmake  PrintVersion.cmake  VersionUtils.cmake  fastscapelibConfig.cmake.in  richdem_fix_duplicate_symbols.patch
cmake/modules/: FindHealpix.cmake  GetGitRevisionAddons.cmake  GetGitRevisionDescription.cmake  PrintVersion.cmake  VersionUtils.cmake  print_version.cmake
cmake/templates/: version.hpp.in
conda-recipes/fastscapelib/: conda_build_config.yaml  install_python.bat  install_python.sh  meta.yaml
conda-recipes/fastscapelib-python/: meta.yaml
doc/: Doxyfile  Makefile  environment.yml
doc/source/: api_cpp.rst  api_python.rst  build_options.md  build_options.rst  citation.rst  conf.py  contributing.md  guide_eroders.md  guide_flow.md  guide_grids.md  index.md  index.rst  install.md  install.rst  internals.md  references.bib  references.md  references.rst  release_notes.md  release_notes.rst  why_fastscapelib.md
doc/source/examples/: CMakeLists.txt  basin.npy  catchment_py.ipynb  escarpment_py.ipynb  index.rst  inner_base_levels_py.ipynb  kernel_eroder_py.ipynb  main.cpp  mountain.cpp  mountain_cpp.md  mountain_cpp_flow_kernel.ipynb  mountain_py.ipynb  planetary_py.ipynb  pyfs.py  river_profile.cpp  river_profile_cpp.md  river_profile_py.ipynb  test_eroder_kernel.ipynb  test_flow_kernel.ipynb  test_jit_dummy.py  test_jit_eroder.py  test_kernel_record_dtype3.ipynb  test_mem_leak.py  thread_pool.hpp
examples/: eroder_kernel.ipynb  escarpement.ipynb  flow_kernel.ipynb  jail.ipynb  mountain.ipynb  mountain_cpp_flow_kernel.ipynb  pits.ipynb  test_eroder_kernel.ipynb  test_flow_kernel.ipynb  voronoi.ipynb
fastscape-python/: README.rst  setup.py
fastscape-python/src/: fastscape.cpp
fastscapelib-python/: setup.py
fastscapelib-python/src/: fastscapelib.cpp
include/fastscape/: config.hpp  consts.hpp  fastscape.hpp  flow_routing.hpp  sinks.hpp  utils.hpp
include/fastscapelib/: Profile.h  basin_graph.hpp  bedrock_chanel.hpp  bedrock_channel.hpp  bedrock_channel_erosion.hpp  boundary.hpp  config.hpp  consts.hpp  (+22 more)
python/: .gitignore  CMakeLists.txt  README.md  README.rst  _fastscapelib_py.pyi  setup.cfg  setup.py
python/fastscapelib/: __init__.py
python/fastscapelib/algo/: __init__.py
python/fastscapelib/eroders/: __init__.py  __init__.pyi  flow_kernel_eroder.py  numba_eroder.py
python/fastscapelib/flow/: __init__.py  __init__.pyi  numba_flow_kernel.py  numba_kernel.py
python/fastscapelib/flow/numba/: __init__.py  flow_kernel.py
python/fastscapelib/flow_graph/: __init__.py
python/fastscapelib/grid/: __init__.py  __init__.pyi
python/fastscapelib/sinks/: __init__.py
python/fastscapelib/tests/: test_algo.py  test_bedrock_channel.py  test_bedrock_river.py  test_boundary.py  test_eroders.py  test_flow_graph.py  test_flow_kernel.py  test_flow_kernel_eroder.py  test_flow_router.py  test_flow_routing.py  test_flow_snapshot.py  test_grid.py  test_healpix_grid.py  test_hillslope.py  test_profile_grid.py  test_raster_grid.py  test_sink_resolver.py  test_sinks.py  test_trimesh.py  test_unstructured_mesh.py
python/src/: algo.cpp  eroders.cpp  flow_graph.cpp  flow_graph.hpp  flow_router.cpp  flow_router.hpp  grid.cpp  grid.hpp  main.cpp  meta.hpp  modelings.cpp  pytensor_containers.hpp  pytensor_utils.hpp  sink_resolver.cpp  sink_resolver.hpp  sinks.cpp  xtensor_python_utils.hpp  xtensor_utils.hpp
test/: CMakeLists.txt  copyGTest.cmake.in  downloadGTest.cmake.in  flow_operator_fixtures.hpp  test_basin_graph.cpp  test_bedrock_channel.cpp  test_bedrock_channel_erosion.cpp  test_boundary.cpp  test_diffusion_adi.cpp  test_flow_graph.cpp  test_flow_kernel.cpp  test_flow_operator.cpp  test_flow_router.cpp  test_flow_routing.cpp  test_flow_snapshot.cpp  test_grid.cpp  test_healpix_grid.cpp  test_hillslope.cpp  test_multi_flow_router.cpp  test_pflood.cpp  test_pflood.hpp  test_profile_grid.cpp  test_raster_bishop_grid.cpp  test_raster_grid.cpp  test_raster_grid.hpp  test_raster_queen_grid.cpp  test_raster_rook_grid.cpp  test_single_flow_router.cpp  test_sink_resolver.cpp  test_sinks.cpp  test_sinks.hpp  test_spl.cpp  test_structured_grid.cpp  test_trimesh.cpp  test_unstructured_mesh.cpp
(+50 files in other folders)
