[build-system]
requires = [
    "scikit-build-core",
    "numpy",
    "pybind11",
    # TODO: replace by "numpy>=1.25.0,<2" when dropping py3.8 support.
    # https://github.com/scipy/oldest-supported-numpy/issues/76
    "oldest-supported-numpy",
]
build-backend = "scikit_build_core.build"

[project]
name = "fastscapelib"
version = "0.1.3"
description = "A C++/Python library of efficient algorithms for landscape evolution modeling"
keywords = ["modeling", "topography", "geomorphology", "landscape-evolution"]
readme = "README.rst"
license = {text = "GPL-3.0 license"}
authors = [
    {name = "Benoît Bovy"},
]
maintainers = [
    {name = "Fastscapelib contributors"},
]
requires-python = ">=3.8"
dependencies = ["numpy"]

[project.urls]
Home = "https://fastscapelib.readthedocs.io"
Repository = "https://github.com/fastscape-lem/fastscapelib"

[project.optional-dependencies]
test = ["pytest>=6.0"]

[tool.scikit-build]
wheel.packages = ["python/fastscapelib"]

[tool.cibuildwheel]
skip = "pp*"
environment = {SKBUILD_CMAKE_ARGS='-DFS_DOWNLOAD_XTENSOR_PYTHON=ON'}
test-extras = "test"
test-command = "pytest {project}/python/fastscapelib/tests"
build-verbosity = 1

[tool.cibuildwheel.macos]
environment = {SKBUILD_CMAKE_ARGS='-DFS_DOWNLOAD_XTENSOR_PYTHON=ON', MACOSX_DEPLOYMENT_TARGET=10.13}
archs = ["auto", "universal2"]
test-skip = ["*universal2:arm64"]

[tool.isort]
profile = "black"
skip_gitignore = true
float_to_top = true
default_section = "THIRDPARTY"
known_first_party = "fastscapelib"

[tool.mypy]
exclude = [
    "doc/source/conf.py",
    "build/",
]
