[build-system]
requires = [
    "scikit-build-core",
    # pybind11 2.12 added support for numpy 2.0
    # pybind11 doesn't require numpy at build time, but xtensor-python does!
    # packages built with numpy 2.x are compatible with numpy 1.xx
    "pybind11>=2.12,<3",
    "numpy>=2.0,<3",
]
build-backend = "scikit_build_core.build"

[project]
name = "fastscapelib"
version = "0.3.0"
description = "A C++/Python library of efficient algorithms for landscape evolution modeling"
keywords = ["modeling", "topography", "geomorphology", "landscape-evolution"]
readme = "README.rst"
license = {text = "GPL-3.0 license"}
authors = [
    {name = "Benoît Bovy"},
]
maintainers = [
    {name = "Fastscapelib contributors"},
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.urls]
Home = "https://fastscapelib.readthedocs.io"
Repository = "https://github.com/fastscape-lem/fastscapelib"

[project.optional-dependencies]
numba = ["numba"]
test = ["pytest>=6.0"]

[tool.scikit-build]
wheel.packages = ["python/fastscapelib"]
sdist.exclude = [".pixi"]

[tool.cibuildwheel]
environment = {SKBUILD_CMAKE_ARGS='-DFS_DOWNLOAD_XTENSOR_PYTHON=ON;-DFS_WITH_HEALPIX=OFF'}
test-extras = "test"
test-command = "pytest {project}/python/fastscapelib/tests"
build-verbosity = 1

[[tool.cibuildwheel.overrides]]
# keep this override: will be useful for next versions of Python
# (Numba support always come with a delay)
# TODO: activate numba tests for py313
# (still some failing test with jitclass in macos arm64, issue seems in numba)
select = "cp3{10,11,12}-*"
inherit.test-requires = "append"
test-requires = ["numba"]

[tool.isort]
profile = "black"
skip_gitignore = true
float_to_top = true
default_section = "THIRDPARTY"
known_first_party = "fastscapelib"

[tool.mypy]
exclude = [
    "doc/source/conf.py",
    "build/",
]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "numba.*"
]
